Clearing up pass probabilty difference

--- a/README.Rmd
+++ b/README.Rmd
@@ -848,9 +848,11 @@ if ( T ) {
 
 **This is point of this post.** Thanks for staying with me. All the stuff above was to get you comfortable with the setting which hopefully you are by now.
 
-Note how most high value `AttackEPVAdded_xy` passes are long passes, often aimed at the edges of the pitch. Note how the optimal targets are also concentrateda around the edges of the pitch. Long passes are likely to fetch more PV because it usually gets you much closer to the goal from where the ball was before. Edges of the pitch are more attractive because defenders will tend to stay towards the insides of the pitch leaving one side less for a defender to impact the pitch control of a wide positioned player from the attacking team. This is expected.
+Note how most high value `AttackEPVAdded_xy` passes are long passes, often aimed at the edges of the pitch. Note how the optimal targets are also concentrated around the edges of the pitch. Long passes are likely to fetch more PV because it usually gets you much closer to the goal from where the ball was before. Edges of the pitch are more attractive because defenders will tend to stay towards the insides of the pitch leaving one side less for a defender to impact the pitch control of a wide positioned player from the attacking team. This is expected.
 
-The reason I started writing is because while these are rewarding passes if they actually happen, it is also much harder to execute such passes and that difficulty does not get considered in the current pitch control and possession value models. The risk of passing  the ball out of bounds, or not being able to pass accurately to the point with the maximum EPV added is much higher for such passes compared to easier passes to someone in the middle of the pitch or to someone closer to the player in possession. Until now we were looking at an outcome based `AttackMaxEPVAdded` i.e. the EPV the team could expect to gain if the ball reached a particular `(x.y)` but if we switch to an intention based `AttackEPVAdded_xy`, i.e. the EPV the team could expect to gain if the ball was attempted to be passed to a particular `(x.y)` then we would need to incorporate the risks of inaccuracy in passing. There are other factors that could also cause inaccuracy such as pressure on the ball, the passer's body orientation, etc. but for now we will keep it simple and consider only the length of the pass and the target location. Note that the term inaccuracy is typically used to describe whether a pass was successfully received by a teammate but in this post it is being used to describe whether a pass intended for a particular location actually reaches that location or goes somewhere else.
+The reason I started writing is because while these are rewarding passes if they actually happen, it is also much harder to execute such passes. In the EPV paper, there is a pass probability component which is a logistic regression model but if it is like most other pass probability models then it is also modelling the probability of accurately passing to a particular point on the pitch and the training data is probably based on historic pass data which are again outcomes. I think there is room to improve this.
+
+The risk of passing the ball out of bounds, or not being able to pass accurately to the point with the maximum EPV added is much higher for passes close to the sidelines, long passes, and so on compared to easier passes to someone in the middle of the pitch or to someone closer to the player in possession. Until now we were looking at an outcome based `AttackMaxEPVAdded` i.e. the EPV the team could expect to gain if the ball reached a particular `(x.y)` but if we switch to an intention based `AttackEPVAdded_xy`, i.e. the EPV the team could expect to gain if the ball was attempted to be passed to a particular `(x.y)` then we would need to incorporate the risks of inaccuracy in passing. There are other factors that could also cause inaccuracy such as pressure on the ball, the passer's body orientation, etc. but for now we will keep it simple and consider only the length of the pass and the target location. Note that the term inaccuracy is typically used to describe whether a pass was successfully received by a teammate but in this post it is being used to describe whether a pass intended for a particular location actually reaches that location or goes somewhere else.
 
 ```{r IntentIllustrationPlot1, echo = F}
 
@@ -967,6 +969,8 @@ print(
 ```
 
 Now that we have these probabilities, we can calculate a new set of pitch control and expected possession values for each intended target location by aggregating the outcome based pitch control and expected possession values of all its actual target locations weighed by the the probability of that actual target location.
+
+This is not the same as just having a pass distance feature in the pass probability logistic regression model. We are redefining pitch control and possession value altogether by differentiating what they mean for a receiver and what they mean for a passer.
 
 ### Combining Pitch Control, Possession Value, and Intent - Example
 
